# securepipe_cli

./: CLI_MIGRATION_VALIDATION_REPORT.md  CLI_VALIDATION_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  install.sh  pyproject.toml  securepipe  securepipe_wrapper.sh
docs/: CLI_AUTHENTICATION_SAM_INTEGRATION.md  cli-quick-reference.md  cli-testing.md
src/securepipe_cli/: __init__.py  cli.py  main.py
src/securepipe_cli/commands/: __init__.py
src/securepipe_cli/utils/: __init__.py
tests/: __init__.py
